1.1.3     _/__/21
    New Features:
        - Added the command  "/woz get [item id]"  which gives a player the item spefied in the  "item"  section of the custom block's definition
            - The new permission  "worldofzombies.command.get"  has been added for this command
            - This command includes dynamic tab completion based on the active custom blocks from the most recent plugin reload
            - If the item doesn't have the required custom block NBT tags, they will be added to the item automatically
        - Added the command  "/woz item nbt (-yaml)"  which sends the player the NBT API string for the item in their main hand
            - The new permission  "worldofzombies.command.item"  has been added for this command
            - The optional flag  "-yaml"  will format the string to start and end with a single quote and escapes the internal single quotes
                - This flag is intended to be used so the returned string can be pasted directly into a yaml file
        - Added a MultiBlockChange packet listener with same functionality as existing BlockChange packet listener
        - Added an error message when a duplicate custom block ID definition is detected
        - Custom block definition yaml files are now ONLY loaded on startup and  /woz reload  to increase performance
        - Added a check in BlockChange and MultiBlockChange packets so that blocks will only be disguised if their real BlockData matches the BlockData in the packet
        - More details for all new custom block features can be found in the file  WorldOfZombies\CustomItems\demo.yml
        - Improved "item" custom block drop tag to include anything in the Material class
        - Added functionality to calculate which custom blocks will drop items based on the "yield" of explosions
        - Added functionality to calculate custom block drops for blocks that break because from explosions
            - Added  "options.blast-resistant"  to not break in explosions